# protobuf-zmq-rust-generator

./: Cargo.toml  README.md
src/: lib.rs  zmq_server_generator.rs
tests/: builder_test.rs  service_gen_test.rs
tests/assets/: test_service.proto
