[package]
name = "protobuf-zqm-rust-gen"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[dependencies]
prost-build = "0.12.3"

[dev-dependencies]
prost-build = "0.12.3"
path-absolutize = "3.1.1"
zmq = "0.10.0"
prost = "0.12.3"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["rt", "time", "rt-multi-thread", "macros"] }
tokio-macros = "2.2.0"

