[package]
name = "protobuf-zmq-rust-generator"

version = "0.1.0"
edition = "2021"
repository = "https://github.com/usherlabs/protobuf-zmq-rust-generator"
description = "A prost/protobuf service generator for rust that generates a zmq server"
license = "MIT"
readme = "README.md"
categories = ["compilers", "network-programming", "development-tools::build-utils"]
keywords = ["protobuf", "zmq", "rust", "generator"]

[lib]
path = "src/lib.rs"

[dependencies]
prost-build = "0.12.3"

[dev-dependencies]
prost-build = "0.12.3"
path-absolutize = "3.1.1"
zmq = "0.10.0"
prost = "0.12.3"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["rt", "time", "rt-multi-thread", "macros"] }
tokio-macros = "2.2.0"

